[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-scholes-dashboard"
version = "0.1.0"
description = "Black-Scholes pricer + Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "streamlit>=1.30",
  "pytest>=7.0",
  "matplotlib>=3.7"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
